--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
             <div class="buttons">L</div>
         </div>
         <div class="row">
-            <div class="special" id="submit" onclick="checkWord()">Enter</div>
+            <div class="special enter" id="submit" onclick="checkWord()">Enter</div>
             <div class="buttons">Z</div>
             <div class="buttons">X</div>
             <div class="buttons">C</div>
@@ -102,7 +102,7 @@
             <div class="buttons">B</div>
             <div class="buttons">N</div>
             <div class="buttons">M</div>
-            <div class="special" id="delete" onclick="deleteLetter()">Delete</div>
+            <div class="special delete" id="delete" onclick="deleteLetter()">Delete</div>
         </div>
     </div>
 </div>
